# pos-annotations

./: .env  .gitignore  README.md  pyproject.toml  requirements-gemini.txt  requirements.txt
configs/: gemini.yaml  ptb_to_coarse.yaml  tagger.yaml  taxonomy.yaml
data/: snli_CLAWS7.txt
data/annotations/: last_annotate_meta.json  sentences_1k.txt
data/mined_examples_round2/heldout/: adv_type.jsonl  pron_type.jsonl  verb_transitivity.jsonl
data/mined_examples_round2/icl/: adv_type.jsonl  pron_type.jsonl  verb_transitivity.jsonl
data/mining_batches/adj_attributive_predicative/: MINING_PROMPT.md  batch_000.json  batch_000.labeled.json  batch_001.json  batch_001.labeled.json  batch_002.json  batch_002.labeled.json  batch_003.json  batch_003.labeled.json  batch_004.json  batch_004.labeled.json  batch_005.json  batch_005.labeled.json  batch_006.json  (+13 more)
data/raw/: ingest_manifest.json
data/sampled/: snli_1k.txt  snli_claws7.json  wiki_1k.txt
data/trial/: pos_subclass_dataset_100.json
prompts/: distinction.jinja2  gemini_icl.yaml
prompts/mining/: distinction_mine.md.jinja2
src/: __init__.py
src/data/: __init__.py  convert_claws7.py  ingest.py  pos_tagset.py  sample_sentences.py
src/eval/: __init__.py  annotate.py  inspect_trial.py  report_ci.py  trial_100.py  validate.py
src/mapping/: __init__.py  claws7_to_json.py  collapse.py
src/mining/: __init__.py  backends.py  export_batches.py  merge_batches.py  mine.py  pool_utils.py
src/tagging/: __init__.py  gemini_tagger.py  prompt_render.py  vllm_tagger.py
tests/: test_collapse.py  test_merge_batches.py
(+616 files in other folders)
